# nix

./: configuration.nix  configuration_proxy.nix  flake.nix  home.nix  home_none.nix
flakes/: flake.nix
flakes/c/: CMakeLists.txt  flake.nix
flakes/c/src/: main.c  main.cpp
flakes/haskell/: flake.nix  your-project-name.cabal
flakes/haskell/app/: Main.hs
flakes/python/: flake.nix  pyproject.toml
flakes/python/src/: hoge.py
flakes/rust/: flake.nix  rust-toolchain.toml
global/: configuration.nix  dkr.nix  dkr_proxy.nix  pc.nix  wsl.nix
global/module/xmonad/: xmonad.hs
hardware/: lenovo.nix
home/: home.nix  linux.nix  none.nix  wsl.nix
home/modules/: .vimrc  git.nix  outline.nix  pc.nix  tmux.nix  vim.nix  zsh.nix
home/modules/nvim/: autocmd.lua  coc.lua  keymap.lua  option.lua
home/modules/nvim/plugins/: comment.lua  dap.lua  gitsigns.lua  telescope.lua  toggleterm.lua  treesitter.lua  which-key.lua
home/modules/nvim/snippets/: c.snippets
home/modules/sh/: function.sh  prompt.sh
home/modules/tmux/: tmux.conf
home/modules/zsh/: zsh-vim.sh
home/modules/zsh/sh/: zsh-vim.sh
scripts/: cmd.sh  code.sh  colorcode.sh  firefox.sh  hogecall  phonetic.sh
